# learn-axum

./: Cargo.toml  client.sh  data.sql  justfile
api/: Cargo.toml
api/src/: lib.rs  logging.rs  settings.rs
api/src/auth/: extractors.rs  jwks.rs  middleware.rs  mod.rs  schemas.rs
api/src/routes/: auth.rs  mod.rs  openapi.rs  resources.rs  users.rs
api/src/schemas/: user.rs
docker/: docker-compose.yml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m01_create_user.rs
src/: database.rs  main.rs  settings.rs
src/auth/: jwks.rs  middleware.rs  mod.rs
src/entities/: user.rs
src/migrate/: m  main.rs  migrator.rs
src/migrate/migrations/: m01_create_user.rs  mod.rs
src/routes/: auth.rs  mod.rs  resources.rs  router1.rs  users.rs
src/schemas/: user.rs
