[package]
name = "learn_axum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "migrate"
path = "src/migrate/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
config = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json"] }
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "cli",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = "1.22.0"
